# codex

./: .dockerignore  .gitignore  .prettierignore  .replit  README.md  audit_report.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  replit.md
.agents/: agent_assets_metadata.toml
.eas/workflows/: e2e-android.yml  e2e-ios.yml
.github/workflows/: bazel.yml  ci.yml  mobile-ci.yml  rust-ci-full.yml  rust-ci.yml
.local/: .commit_message
.local/share/.cargo/git/checkouts/rules_rust-7226a686fb7656c8/b56cbaa/examples/cross_compile/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel
.local/share/.cargo/git/checkouts/rules_rust-7226a686fb7656c8/b56cbaa/examples/cross_compile/src/: lib.rs  main.rs
.local/share/.cargo/git/checkouts/rules_rust-7226a686fb7656c8/b56cbaa/examples/cross_compile/tools/: BUILD.bazel  infer_test.bzl  infer_tester.rs
.local/tasks/: codex-web-app.md  task-1.md  task-3.md  task-4.md
.maestro/: fake_agent_patch_flow.yml  fake_build_runner_flow.yml  fake_git_publish_flow.yml  sample_project_flow.yml
.playwright-cli/: page-2026-04-18T21-08-35-750Z.yml
apps/mobile/: README.md  app.json  eas.json  package.json  tsconfig.json
attached_assets/: Pasted--UserQuery-variable-Z-Z-Initialize-a-Python-based-Adver_1776437632012.txt  Pasted-I-can-do-that-here-you-are-my-love-THE-ADVERSARIAL-ROBU_1776437147610.txt  Pasted-Initialize-a-Python-based-Adversarial-Robustness-Framew_1776437252194.txt  Pasted-Mandatory-analysis-and-reasoning-always-is-always-as-EN_1776444578138.txt  Pasted-My-friend-sent-me-this-emoji-message-as-part-of-an-esca_1776456350653.txt
codex-rs/arg0/: Cargo.toml
codex-rs/execpolicy/: Cargo.toml
docs/mobile/: adr-0001-mobile-codex-architecture.md  (+17 more)
scripts/: mobile-docs-sanity.mjs  mobile-eas-workflow-validate.mjs  mobile-maestro-check.mjs  mobile-qa-report.mjs  mobile-test-all.mjs  mobile-web-smoke.mjs
site/: index.html
web/: .env.example  Dockerfile.render  README.md  RELEASE_CHECKLIST.md  mock-codex.mjs  package-lock.json  package.json  playwright.config.mjs  server.mjs
(+1163 files in other folders)
